# tk-core-auth

./: pyproject.toml  requirements.txt
python/tank/: __init__.py  constants.py  errors.py  log.py
python/tank/authentication/: app_session_launcher.py  console_authentication.py  core_defaults_manager.py  login_dialog.py  session_cache.py  shotgun_wrapper.py  site_info.py  user_impl.py
python/tank/authentication/sso_saml2/core/: sso_saml2_core.py  utils.py
python/tank/authentication/ui/: login_dialog.py
python/tank/util/: __init__.py  errors.py  filesystem.py  local_file_storage.py  login.py  pickle.py  qt_importer.py  sgre.py  unicode.py
python/tank/util/shotgun/: connection.py
