[project]
name = "tk-core-auth"
version = "1.0.0"
description = "Fork of tk-core that provides authentication support for the Dreamlight Pipeline without the other bells and whistles of the original package"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# Only required when using session_cache.set_encryption
crypto = [
    "cryptography~=45.0.6"
]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]

[tool.origin]
url = "https://github.com/shotgunsoftware/tk-core"
base-version = "v0.23.5"
base-ref = "3fed2c4b07e07bc1efbe60427d8e218b52c6669b"